compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__local_variable_string.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1023
expression: "\nfn wibble() {\n  let assert \"a\" <> j = \"ab\"\n\n}\n"
---
fn wibble() {
  let assert "a" <> j = "ab"
|
}


----- Completion content -----
