compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__opaque_type.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub opaque record Wibble {\n  Wobble\n}\n"
---
|
pub opaque record Wibble {
  Wobble
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   2_Wobble
  desc:   app
  edits:
    [1:0-1:0]: "Wobble"
