compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__private_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nfn private() {\n  1\n}\n"
---
|
fn private() {
  1
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
private
  kind:   Function
  detail: fn() -> Int
  sort:   2_private
  desc:   app
  edits:
    [1:0-1:0]: "private"
